# python_web_HW_09

./: README.md  authors.json  main.py  pyproject.toml  quotes.json
